# serde-cursor

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: enhancement.md
.github/workflows/: ci.yml  release.yml  typos.yml
impl/src/: lib.rs
proc_macro/: Cargo.toml  release.toml
proc_macro/src/: const_str.rs  lib.rs  path.rs
src/: const_str.rs  de.rs  field.rs  lib.rs  path_segment.rs  sequence.rs  ser.rs
src/index/: mod.rs  range.rs  range_from.rs  range_full.rs  range_inclusive.rs  range_to.rs  range_to_inclusive.rs
tests/: error.rs  field_name.rs  index.rs  interpolation.rs  roundtrip.rs  ser.rs  test.rs  tests.rs  wildcard.rs
tests/ui/: missing_generic.rs  missing_generic.stderr  missing_path.rs  missing_path.stderr  missing_rest_of_path.rs  missing_rest_of_path.stderr
