[package]
name = "serde_cursor_impl"
description = "implementation detail of the serde_cursor crate"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[package.metadata.release]
tag = false

[lib]
proc-macro = true

[dependencies]
litrs = "1.0.0"

[dev-dependencies]
serde_cursor = { version = "0.3.0", path = ".." }
serde = { version = "1.0.228", features = ["derive"] }
serde_core = "1.0.228"
serde-query = "0.2.0"
serde_json = "1.0.149"
toml = "1.0"
